Overflow-wrap fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,7 @@ body {
   max-width: 100ch;
   padding: 1rem 1rem 10rem;
   line-height: 1.5;
+  overflow-wrap: break-word;
 }
 
 * {
